--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -2,8 +2,7 @@
   <particles-js></particles-js>
   
   <message-display 
-  :messages="messages" 
-  :active="modalOpen"></message-display>
+  :messages="messages"></message-display>
   
   <text-entry @message = "onMessage" :screen-name = "screenName" />
 </div>
